--- a/business-intelligence.html
+++ b/business-intelligence.html
@@ -90,7 +90,7 @@ Cover) at Paymentsense.</p>
 <p><span class="badge badge-light"></span></p>
 <p>2 days ago ... Apply online for the job of Business Intelligence Analyst at Zengistics.</p>
 <hr/>
-<h5><a href='https://street-team.workable.com/j/0440CEA2E9?viewed=true'>Verve - Jobs: Business Intelligence Analyst - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://street-team.workable.com/j/0440CEA2E9?viewed=true'>Verve - Jobs: Business Intelligence Analyst - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>5 days ago ... Apply online for the job of Business Intelligence Analyst at Verve.</p>
 <hr/>
@@ -135,7 +135,7 @@ analyzing and reporting operational and business data from multiple sources.</p>
 <p><span class="badge badge-light">London, England, United Kingdom London</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='https://verse.workable.com/jobs/1071660/candidates/new'>Jobs: Head of Business Intelligence ... - Verse Technologies Inc</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://verse.workable.com/jobs/1071660/candidates/new'>Jobs: Head of Business Intelligence ... - Verse Technologies Inc</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... Apply online for the job of Head of Business Intelligence & Data Science at Verse 
 Technologies Inc.</p>
@@ -197,11 +197,11 @@ developing and implementing metrics and reporting to improve our business and
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/BrainspireSolutions/743999686600280-manager-director-of-business-intelligence'>Brainspire Solutions Manager/Director of Business Intelligence | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BrainspireSolutions/743999686600280-manager-director-of-business-intelligence'>Brainspire Solutions Manager/Director of Business Intelligence | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Denver</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/pitchbook/job/oDwBafwE'>PitchBook Data, Inc. Careers - Senior Business Intelligence Analyst</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/pitchbook/job/oDwBafwE'>PitchBook Data, Inc. Careers - Senior Business Intelligence Analyst</a></h5> 
 <p><span class="badge badge-light">Seattle Seattle San Francisco New York London Mumbai</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
@@ -259,7 +259,7 @@ in Herten (published: 12.07.2019). Apply now or check the other available jobs.<
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/mavenlink/job/oXByafw0'>Mavenlink Careers - Business Intelligence Consultant</a></h5> 
+<h5><a href='http://jobs.jobvite.com/mavenlink/job/oXByafw0'>Mavenlink Careers - Business Intelligence Consultant</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>5 days ago ... Today's leading companies are able to transform their data into insights and 
 strategic decisions that drive growth. The Business Intelligence team at 
@@ -298,7 +298,7 @@ one of the fastest growing fields within MediaCom and focuses on (1) providing?.
 <p><span class="badge badge-light">Austin</span></p>
 <p>Posted on:: 2019-07-19</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/StrategicInsight/743999687263031-associate-business-intelligence-and-strategy-asset-management'>Strategic Insight Associate, Business Intelligence and Strategy - Asset Management | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/StrategicInsight/743999687263031-associate-business-intelligence-and-strategy-asset-management'>Strategic Insight Associate, Business Intelligence and Strategy - Asset Management | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Boston, MA</span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
@@ -306,7 +306,7 @@ one of the fastest growing fields within MediaCom and focuses on (1) providing?.
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
-<h5><a href='https://workable.com/j/0DC6BEDC84'>Hostinger - Jobs: Junior Business Intelligence Developer - Apply ...</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://workable.com/j/0DC6BEDC84'>Hostinger - Jobs: Junior Business Intelligence Developer - Apply ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... As you might already know, Business Intelligence teams analyse business data 
 and can identify the driving forces behind revenue growth. In other words, they?...</p>
@@ -396,7 +396,7 @@ We enjoy working on a product that helps millions of people find love and get a?
 <p><span class="badge badge-light">Dublin</span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/guildeducation/jobs/1778090'>Job Application for Senior Business Intelligence Analyst - Partnerships at Guild Education</a></h5> 
+<h5><a href='https://boards.greenhouse.io/guildeducation/jobs/1778090'>Job Application for Senior Business Intelligence Analyst - Partnerships at Guild Education</a></h5> 
 <p><span class="badge badge-light">Denver</span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
